Feat: Add iptables save/load and uncomment roles

--- a/ansible/playbooks/router.yml
+++ b/ansible/playbooks/router.yml
@@ -9,10 +9,10 @@
 - hosts: router
   any_errors_fatal: true
   roles:
-    # - 'docker'
-    # - 'docker-compose'
+    - 'docker'
+    - 'docker-compose'
     - 'polarproxy'
     - 'tor_proxy'
-    # - 'malcolm'
+    - 'malcolm'
 
 
