Fix: Use owner module for iptables

--- a/ansible/playbooks/router.yml
+++ b/ansible/playbooks/router.yml
@@ -11,8 +11,9 @@
   roles:
     - 'docker'
     - 'docker-compose'
-    - 'polarproxy'
     - 'tor_proxy'
     - 'malcolm'
+    # Keeping this last due to the iptables rules
+    - 'polarproxy'
 
 
